--- a/Tic Tac Toe/index.html
+++ b/Tic Tac Toe/index.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="stylesheet.css">
-    <script src="script.js"></script>
+    <script src="script.js" async></script>
     <title>Tic Tac Toe</title>
 </head>
+
 <body>
-    <h1>Tic-Tac-Toe</h1>
-    <table>     
-        <tr>
-            <td><button onclick="humanPlay('0')" id="0"></button></td>
-            <td><button onclick="humanPlay('1')" id="1"></button></td>
-            <td><button onclick="humanPlay('2')" id="2"></button></td>
-        </tr>  
-        <tr>
-            <td><button onclick="humanPlay('3')" id="3"></button></td>
-            <td><button onclick="humanPlay('4')" id="4"></button></td>
-            <td><button onclick="humanPlay('5')" id="5"></button></td>
-        </tr>
-        <tr>
-            <td><button onclick="humanPlay('6')" id="6"></button></td>
-            <td><button onclick="humanPlay('7')" id="7"></button></td>
-            <td><button onclick="humanPlay('8')" id="8"></button></td>
-        </tr>     
-    </table>
-    <h2 id="result">Match result will show here.</h2>
-    <button class="new" onclick="newGame()">Restart</button>
+    <main>
+        <h1>Tic-Tac-Toe</h1>
+        <table>
+            <tr>
+                <td><button onclick="humanPlay('0')" id="0"></button></td>
+                <td><button onclick="humanPlay('1')" id="1"></button></td>
+                <td><button onclick="humanPlay('2')" id="2"></button></td>
+            </tr>
+            <tr>
+                <td><button onclick="humanPlay('3')" id="3"></button></td>
+                <td><button onclick="humanPlay('4')" id="4"></button></td>
+                <td><button onclick="humanPlay('5')" id="5"></button></td>
+            </tr>
+            <tr>
+                <td><button onclick="humanPlay('6')" id="6"></button></td>
+                <td><button onclick="humanPlay('7')" id="7"></button></td>
+                <td><button onclick="humanPlay('8')" id="8"></button></td>
+            </tr>
+        </table>
+        <h2 id="result">Match result will show here.</h2>
+        <button class="new" onclick="newGame()">Restart</button>
+    </main>
 </body>
+
 </html>
